Fix some issues with icu for dict tool
The dict tool can be run during the build, therefore
copy just in case icu data file to tool application path,
so it does not require installation and can
run no matter if it is a prefix non prefix build.

Guard for webengine_system_icu since there is no icu file
in that case.

Remove awesome looking genex from examples.

Pick-to: 6.2
Change-Id: I2fd5ecf6c99ae1d003a1ac1c7bce2bb61a05f73f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/api/CMakeLists.txt
+++ b/src/core/api/CMakeLists.txt
@@ -121,6 +121,7 @@ endforeach()
 if (NOT QT_FEATURE_webengine_system_icu)
     get_filename_component(icuFile ${buildDir}/${config}/${arch}/icudtl.dat REALPATH)
     list(APPEND resourceFiles ${icuFile})
+    set_target_properties(WebEngineCore PROPERTIES ICUDTL_FILE ${icuFile})
 endif()
 
 if(QT_FEATURE_framework)
