--- a/src/core/tools/CMakeLists.txt
+++ b/src/core/tools/CMakeLists.txt
@@ -20,5 +20,15 @@ if(QT_FEATURE_webengine_spellchecker)
     qt_internal_extend_target(${dict_target_name} CONDITION GCC OR CLANG
         COMPILE_OPTIONS -Wno-unused-parameter
     )
+    if(NOT QT_FEATURE_webengine_system_icu AND QT_WILL_INSTALL)
+        # tool can be called durig build so copy icu file
+        get_target_property(icuFile WebEngineCore ICUDTL_FILE)
+        addCopyCommand(${dict_target_name} "${icuFile}"
+            "${QT_BUILD_DIR}/${INSTALL_LIBEXECDIR}")
+    endif()
+    qt_internal_extend_target(${dict_target_name}
+        CONDITION NOT QT_FEATURE_webengine_system_icu
+        DEFINES USE_ICU_FILE
+    )
 endif()
 
