Use qtpositioning repo as a dependency instead of qtlocation
The QtPositioning module is now moved to its own repo, so we need to
update dependencies accordingly

Task-number: QTBUG-97188
Change-Id: I492ceb1743bfe6a546ab962672ad21355471b567
Reviewed-by: Daniel Smith <Daniel.Smith@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 974bc6b7d7110df50d6cc46e7eaea12742b9ff66)
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -2,8 +2,8 @@ dependencies:
   ../qtdeclarative:
     ref: 5e7c341a8deacaca3e76de5c62d288e860c0385c
     required: true
-  ../qtlocation:
-    ref: c3b1059d8532640c8586199ff314f964dbe62772
+  ../qtpositioning:
+    ref: d5363cf00a7a1709fb9fb33bb6884260edfa379b
     required: false
   ../qttools:
     ref: 9acf2c2175de01a498395a547809c272d4351e4f
