Add cmake api for 'bdict' dictionary conversion
Fix spellchecker example and test to use new api.
Note we should not use qt6 prefix in cmake api in examples.

Change-Id: Ib800bf2b7bd83e10060fa01ccd8d4a262752e09b
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.19)
 include(.cmake.conf)
 include(ExternalProject)
 include(cmake/Functions.cmake)
+include(src/core/api/Qt6WebEngineCoreMacros.cmake)
 
 project(QtWebEngine
     VERSION "${QT_REPO_MODULE_VERSION}"
