--- a/examples/webenginewidgets/spellchecker/CMakeLists.txt
+++ b/examples/webenginewidgets/spellchecker/CMakeLists.txt
@@ -39,7 +39,7 @@ set(spellchecker_resource_files
     "data/style.css"
 )
 
-qt6_add_resources(spellchecker "spellchecker"
+qt_add_resources(spellchecker "spellchecker"
     PREFIX
         "/"
     BASE
@@ -55,38 +55,15 @@ install(TARGETS spellchecker
 )
 
 file(GLOB_RECURSE dicts
-    RELATIVE ${CMAKE_CURRENT_LIST_DIR}/dict
+    ABSOLUTE ${CMAKE_CURRENT_LIST_DIR}/dict
     */*.dic
 )
 
-if(QT_GENERATOR_IS_MULTI_CONFIG)
-    set(spellcheckerDir ${CMAKE_CURRENT_BINARY_DIR}/dict/qtwebengine_dictionaries)
-else()
-    set(spellcheckerDir ${CMAKE_CURRENT_BINARY_DIR}/qtwebengine_dictionaries)
-endif()
-
-# note setting QT_WEBENGINE_ICU_DATA below is not required if this example
-# is not compiled as part of qtwebengine module build
-
 foreach(dictFile ${dicts})
-    get_filename_component(dictName ${dictFile} NAME_WE)
-    add_custom_command(TARGET spellchecker
-        PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E make_directory ${spellcheckerDir}
-        COMMAND ${CMAKE_COMMAND} -E env
-        $<TARGET_FILE:${QT_CMAKE_EXPORT_NAMESPACE}::qwebengine_convert_dict>
-        ${CMAKE_CURRENT_SOURCE_DIR}/dict/${dictFile} ${spellcheckerDir}/${dictName}.bdic
-        COMMENT "Running qwebengine_convert_dict"
+    qt_add_webengine_dictionary(
+        TARGET spellchecker
+        SOURCE "${dictFile}"
+        OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
 endforeach()
-
-# copy dictionaries to $<CONFIG> build dir
-if(QT_GENERATOR_IS_MULTI_CONFIG)
-    add_custom_command(TARGET spellchecker
-       POST_BUILD
-       COMMAND ${CMAKE_COMMAND} -E echo Copying dictionares
-       COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/dict
-       ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>
-    )
-endif()
 
