Doc: Fix qdoc warnings and enable zero warning limit
Change-Id: Ifa2914e7bca9c224670a1891785d0ba8262cd61b
Reviewed-by: Paul Wicking <paul.wicking@qt.io>

--- a/coin/module_config.yaml
+++ b/coin/module_config.yaml
@@ -22,3 +22,4 @@ instructions:
         property: target.osVersion
         equals_value: QEMU
     - !include "{{qt/qtbase}}/coin_module_test_template_v3.yaml"
+    - !include "{{qt/qtbase}}/coin_module_test_docs.yaml"
