Minor. Cleanup qt6_add_resources usage
We should not use qt6 prefixed functions in examples.

Pick-to: 6.2
Change-Id: Ibf2618ef4f64b560decb219527d619aad680f216
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/pdf/pdfviewer/CMakeLists.txt
+++ b/examples/pdf/pdfviewer/CMakeLists.txt
@@ -48,7 +48,7 @@ set(viewer_resource_files
     "viewer.qml"
 )
 
-qt6_add_resources(pdfviewerquick "viewer"
+qt_add_resources(pdfviewerquick "viewer"
     PREFIX
         "/pdfviewer"
     FILES
