--- a/examples/webenginewidgets/cookiebrowser/CMakeLists.txt
+++ b/examples/webenginewidgets/cookiebrowser/CMakeLists.txt
@@ -39,7 +39,7 @@ set(cookiebrowser_resource_files
     "3rdparty/view-refresh.png"
 )
 
-qt6_add_resources(cookiebrowser "cookiebrowser"
+qt_add_resources(cookiebrowser "cookiebrowser"
     PREFIX
         "/"
     BASE
