--- a/src/core/tools/CMakeLists.txt
+++ b/src/core/tools/CMakeLists.txt
@@ -13,8 +13,9 @@ if(QT_FEATURE_webengine_spellchecker)
         INCLUDE_DIRECTORIES
             ../../3rdparty/chromium/third_party/abseil-cpp
     )
-    qt_internal_return_unless_building_tools()
-
+    if(COMMAND qt_internal_return_unless_building_tools)
+        qt_internal_return_unless_building_tools()
+    endif()
     qt_skip_warnings_are_errors(${dict_target_name})
     add_dependencies(${dict_target_name} WebEngineCore)
     qt_internal_extend_target(${dict_target_name} CONDITION WIN32
