Update module-split for installer
Module-split update to get all QtPdf related files.

Fixes: QTBUG-86972
Fixes: QTBUG-100023
Pick-to: 6.3 5.15
Change-Id: I9833fe2be00359c08ca71a2301262473b760df45
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -2,16 +2,19 @@
     "version": "1",
     "module-split": {
         "qtpdf": [
+            "**/bin/*Pdf*",
             "**/include/*QtPdf*/**/*",
-            "**/lib/cmake/Qt5Gui/*",
-            "**/lib/cmake/Qt5Pdf/*",
-            "**/lib/cmake/Qt5PdfWidgets/*",
-            "**/lib/pkgconfig/Qt5Pdf*",
-            "**/lib/libQt5Pdf*",
+            "**/lib/cmake/Qt*Gui/*Pdf*",
+            "**/lib/cmake/Qt*Pdf*/*",
+            "**/lib/cmake/Qt*Qml/QmlPlugins/*pdf*",
+            "**/lib/metatypes/*pdf*",
+            "**/lib/pkgconfig/*Pdf*",
+            "**/lib/*Pdf*",
             "**/lib/static_chrome/*",
-            "**/lib/QtPdf.framework/*",
+            "**/lib/QtPdf*.framework/**",
             "**/mkspecs/modules/qt_lib_pdf*",
             "**/mkspecs/modules/qt_plugin_qpdf.pri",
+            "**/modules/Pdf*",
             "**/plugins/imageformats/*",
             "**/qml/QtQuick/**/*"
         ]
