Add static builds for qtpdf
Add 3rdparty installed headers so static builds can
use bundled qt libs.

Fix static gn and archiver/librarian setup.

Updates 3rdparty:

* 5d88de975 Fix static build with qt3rdparty libs

Task-number: QTBUG-87154
Task-number: QTBUG-88614
Pick-to: 6.3 6.2
Change-Id: Iad7682da92b558b500140f415acc0bc9c9a1c22e
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/pdf/configure/BUILD.root.gn.in
+++ b/src/pdf/configure/BUILD.root.gn.in
@@ -1,5 +1,27 @@
 import("//build/config/features.gni")
 
+config("qt_libpng_config") {
+    include_dirs =  [ @GN_PNG_INCLUDES@ ]
+    defines = [ "USE_SYSTEM_LIBPNG" ]
+}
+config ("qt_libjpeg_config") {
+    include_dirs = [ @GN_JPEG_INCLUDES@ ]
+}
+config("qt_harfbuzz_config") {
+    visibility = [
+      "//third_party:freetype_harfbuzz",
+      "//third_party/freetype:freetype_source",
+    ]
+    include_dirs = [ @GN_HARFBUZZ_INCLUDES@ ]
+}
+config("qt_freetype_config") {
+     visibility = [
+       "//third_party:freetype_harfbuzz",
+       "//third_party/harfbuzz-ng:harfbuzz_source",
+     ]
+     include_dirs = [ @GN_FREETYPE_INCLUDES@ ]
+}
+
 config("QtPdf_config") {
   cflags = [
     @GN_CFLAGS_C@,
