Switch examples to build as isolated sub-builds
Pick-to: 6.2 6.3
Task-number: QTBUG-90820
Change-Id: I8539fee3ea7311acf9ee4e736fb19e6ff595fcae
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>

--- a/examples/pdf/CMakeLists.txt
+++ b/examples/pdf/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_subdirectory(pdfviewer)
-add_subdirectory(multipage)
+qt_internal_add_example(pdfviewer)
+qt_internal_add_example(multipage)
 if(NOT TARGET Qt::Svg)
     message(WARNING "QtSvg is required as runtime dependency for qtpdfquick examples.")
 endif()
