--- a/examples/webenginequick/CMakeLists.txt
+++ b/examples/webenginequick/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_subdirectory(customdialogs)
-add_subdirectory(lifecycle)
-add_subdirectory(minimal)
-add_subdirectory(quicknanobrowser)
-add_subdirectory(webengineaction)
+qt_internal_add_example(customdialogs)
+qt_internal_add_example(lifecycle)
+qt_internal_add_example(minimal)
+qt_internal_add_example(quicknanobrowser)
+qt_internal_add_example(webengineaction)
 if(TARGET Qt::QuickControls2)
-    add_subdirectory(recipebrowser)
+    qt_internal_add_example(recipebrowser)
 endif()
