--- a/examples/webenginewidgets/CMakeLists.txt
+++ b/examples/webenginewidgets/CMakeLists.txt
@@ -1,22 +1,22 @@
-add_subdirectory(minimal)
-add_subdirectory(contentmanipulation)
-add_subdirectory(cookiebrowser)
-add_subdirectory(notifications)
-add_subdirectory(simplebrowser)
-add_subdirectory(stylesheetbrowser)
-add_subdirectory(videoplayer)
-add_subdirectory(webui)
+qt_internal_add_example(minimal)
+qt_internal_add_example(contentmanipulation)
+qt_internal_add_example(cookiebrowser)
+qt_internal_add_example(notifications)
+qt_internal_add_example(simplebrowser)
+qt_internal_add_example(stylesheetbrowser)
+qt_internal_add_example(videoplayer)
+qt_internal_add_example(webui)
 if(QT_FEATURE_webengine_geolocation)
-    add_subdirectory(maps)
+    qt_internal_add_example(maps)
 endif()
 if(QT_FEATURE_webengine_webchannel)
-    add_subdirectory(markdowneditor)
+    qt_internal_add_example(markdowneditor)
 endif()
 if(QT_FEATURE_webengine_printing_and_pdf)
-    add_subdirectory(printme)
-    add_subdirectory(html2pdf)
+    qt_internal_add_example(printme)
+    qt_internal_add_example(html2pdf)
 endif()
 if(QT_FEATURE_webengine_spellchecker AND NOT CMAKE_CROSSCOMPILING
     AND NOT QT_FEATURE_webengine_native_spellchecker AND NOT WIN32)
-    add_subdirectory(spellchecker)
+    qt_internal_add_example(spellchecker)
 endif()
