--- a/src/pdfquick/CMakeLists.txt
+++ b/src/pdfquick/CMakeLists.txt
@@ -17,6 +17,7 @@ qt_internal_add_qml_module(PdfQuick
     NO_GENERATE_PLUGIN_SOURCE
     NO_PLUGIN_OPTIONAL
     NO_GENERATE_QMLTYPES
+    INSTALL_SOURCE_QMLTYPES "plugins.qmltypes"
     PLUGIN_TARGET qtpdfquickplugin
     QML_FILES ${qml_files}
     DEPENDENCIES QtQuickControls2
