Make QtPdf a proper generated module
- remove plugins.qmltypes, because it's generated automatically since
  d32563a3365fd9432993590e6ac9817fe6f6bd41
- plugin code is also generated, so we don't need plugin-related CMake
  commands
- QtQuick is a dependency; auto means forward the import version to the
  dependency.
- QtQuick.Controls is only needed in bundled qml files, and we expect
  tooling to find it from import statements. It's not declared as a
  cmake dependency because we don't use it from C++.
- move qml files into the source directory so that the implicit import
  matches the module directory
- move style-specific PdfStyle.qml files into directories beginning
  with capital letters, since we are moving them anyway, and the
  styles now have capitalized names

Change-Id: If517ce30d0e22fb0354272cd2002841fd2783cfc
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/src/pdfquick/CMakeLists.txt
+++ b/src/pdfquick/CMakeLists.txt
@@ -2,23 +2,20 @@ find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS Core Gui Qml Quic
 
 set(qml_files
 # TODO:
-#    "qml/+material/PdfStyle.qml"
-#    "qml/+universal/PdfStyle.qml"
-    "qml/PdfMultiPageView.qml"
-    "qml/PdfPageView.qml"
-    "qml/PdfScrollablePageView.qml"
-    "qml/PdfStyle.qml"
+#    "+Material/PdfStyle.qml"
+#    "+Universal/PdfStyle.qml"
+    "PdfMultiPageView.qml"
+    "PdfPageView.qml"
+    "PdfScrollablePageView.qml"
+    "PdfStyle.qml"
 )
 
 qt_internal_add_qml_module(PdfQuick
     URI "QtQuick.Pdf"
     VERSION "${PROJECT_VERSION}"
-    CLASS_NAME QtQuickPdfPlugin
-    NO_PLUGIN_OPTIONAL
-    PLUGIN_TARGET qtpdfquickplugin
     PAST_MAJOR_VERSIONS 5
     QML_FILES ${qml_files}
-    DEPENDENCIES QtQuickControls2
+    DEPENDENCIES QtQuick/auto
     SOURCES
         qquickpdfdocument.cpp qquickpdfdocument_p.h
         qquickpdflinkmodel.cpp qquickpdflinkmodel_p.h
