Quick: Add support for replacing touch handles with delegates
Task-number: QTBUG-85043
Change-Id: I1c87aff352e07eb309d5ba8747b9e50a191d478e
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/examples/webenginequick/CMakeLists.txt
+++ b/examples/webenginequick/CMakeLists.txt
@@ -1,4 +1,5 @@
 qt_internal_add_example(customdialogs)
+qt_internal_add_example(customtouchhandle)
 qt_internal_add_example(lifecycle)
 qt_internal_add_example(minimal)
 qt_internal_add_example(quicknanobrowser)
