Combine QPdfDestination and QPdfSearchResult into QPdfLink
Inheritance was a decent way to model this, conceptually. A hyperlink
is modeled like the HTML kind: a region covering the source material
that the user will click on, and a destination where we will jump when
they click it; whereas a search result has the same information plus the
text before and after the search text, so that we can show some context
in a ListView with search results.

By going this way, we need to document which fields we use which way
under which conditions. But, we have a rule that value types cannot use
inheritance, just in case the user would ever try to use them
polymorphically (in spite of the other rule that we never pass value
types by pointer, and thus there is no actual polymorphism), or just
in case the destructor of the base class would not be called when
a subclass value goes out of scope.

Anyway, perhaps an upside is that this resembles a link in Xanadu, or in
a fully-normalized database schema: an object that fully describes both
ends of a connection, and thus is able to traverse either direction, in
theory. (Although we don't really use it that way. The link-following
behavior in a PDF viewer tends to be one-way, as in a web browser.)

When using QAbstractItemModel (as in QPdfSearchModel and QPdfLinkModel),
the cells in the "database" are accessed separately via the data()
function, so there is no need for a transport object to hold a whole
"row". That's OK for item views; but we need this link object for the
purpose of less-clumsy C++ API, as a return value from a few functions.
For example when implementing a viewer in QML, we use Repeater to
instantiate Items for each hyperlink (decorations and a TapHandler),
and Repeater uses the QAIM interface. But when implementing a
widget-based viewer, it's better to call a hit-testing function like
QPdfLinkModel::linkAt(pos) to find out whether a link exists at a
particular mouse location; and that function can return a QPdfLink.

--- a/src/pdf/CMakeLists.txt
+++ b/src/pdf/CMakeLists.txt
@@ -15,15 +15,14 @@ set(buildDir "${CMAKE_CURRENT_BINARY_DIR}")
 qt_internal_add_module(Pdf
     SOURCES
         qpdfbookmarkmodel.cpp qpdfbookmarkmodel.h
-        qpdfdestination.cpp qpdfdestination.h qpdfdestination_p.h
         qpdfdocument.cpp qpdfdocument.h qpdfdocument_p.h
         qpdfdocumentrenderoptions.h
         qpdffile.cpp qpdffile_p.h
+        qpdflink.cpp qpdflink.h qpdflink_p.h
         qpdflinkmodel.cpp qpdflinkmodel_p.h qpdflinkmodel_p_p.h
         qpdfpagenavigation.cpp qpdfpagenavigation.h
         qpdfpagerenderer.cpp qpdfpagerenderer.h
         qpdfsearchmodel.cpp qpdfsearchmodel.h qpdfsearchmodel_p.h
-        qpdfsearchresult.cpp qpdfsearchresult.h qpdfsearchresult_p.h
         qpdfselection.cpp qpdfselection.h qpdfselection_p.h
         qtpdfglobal.h
         qpdfnamespace.h
