--- a/tests/auto/pdf/CMakeLists.txt
+++ b/tests/auto/pdf/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(qpdfbookmarkmodel)
-add_subdirectory(qpdfpagenavigation)
+#add_subdirectory(qpdfpagenavigation)
 add_subdirectory(qpdfpagerenderer)
 if(TARGET Qt::PrintSupport)
     add_subdirectory(qpdfdocument)
