PDF widget example: switch to SVG icons
They look better on high-dpi displays, and come mostly from the KDE
Oxygen theme, except that document-open.svgz is from
https://commons.wikimedia.org/wiki/File:Gnome-fs-directory.svg
For future reference: Nuvola icons have a similar style
https://commons.wikimedia.org/wiki/Category:Nuvola_SVG_icons

The UI file also has icon theme names specified now, so the icons
ought to come from the system theme if one is set, and fall back to
the SVG resources otherwise.

Change-Id: I6d50f143c9d1f24e0ba87ea1506c1a35a47588d8
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>

--- a/examples/pdfwidgets/pdfviewer/CMakeLists.txt
+++ b/examples/pdfwidgets/pdfviewer/CMakeLists.txt
@@ -33,14 +33,17 @@ target_link_libraries(pdfviewerwidgets PUBLIC
 
 # Resources:
 set(resources_resource_files
-    "images/busy.png"
-    "images/fileopen.png"
-    "images/go-next-24.png"
-    "images/go-previous-24.png"
-    "images/zoom-in-24.png"
-    "images/zoom-in-32.png"
-    "images/zoom-out-24.png"
-    "images/zoom-out-32.png"
+    "images/zoom-fit-width.svgz"
+    "images/zoom-in.svgz"
+    "images/go-previous-view-page.svgz"
+    "images/zoom-original.svgz"
+    "images/go-previous-view.svgz"
+    "images/go-next-view-page.svgz"
+    "images/zoom-fit-best.svgz"
+    "images/zoom-out.svgz"
+    "images/zoom-previous.svgz"
+    "images/document-open.svgz"
+    "images/go-next-view.svgz"
 )
 
 qt_add_resources(pdfviewerwidgets "resources"
