Enable use of system ICU in QtPDF
Change-Id: I88b402d3da4ec079a72ff6882e68f09b2d507446
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/pdf/CMakeLists.txt
+++ b/src/pdf/CMakeLists.txt
@@ -113,10 +113,14 @@ foreach(arch ${archs})
         )
 
         if(LINUX)
-          list(APPEND gnArgArg
-              is_cfi=false
-              ozone_auto_platforms=false
-              use_gnome_keyring=false)
+            list(APPEND gnArgArg
+                is_cfi=false
+                ozone_auto_platforms=false
+                use_gnome_keyring=false)
+            extend_gn_list(gnArgArg
+                ARGS use_system_icu
+                CONDITION QT_FEATURE_webengine_system_icu
+            )
         endif()
         if(MACOS)
             list(APPEND gnArgArg angle_enable_vulkan=false)
