QtPDF: Get styles working again; remove visible hyperlink adornments
Update to versionless imports. The color type comes from the QtQuick
import now. Add the styles to CMakeLists.txt so they get installed.
Use SystemPalette rather than instantiating a Control.

We'd probably better just assume that the PDF has hyperlinks decorated
however the author wanted, rather than risking redundant underlines.
Declare linkUnderscoreStrokeWidth: -1 since the ShapePath.strokeWidth
docs tell us "When set to a negative value, no stroking occurs."
But the user can turn them back on using a custom style.

Update the screenshot: avoid showing off how bad the underscores looked.

PdfPageView doesn't depend on Controls and doesn't import styles:
it simply loses the light-grey rectangles around links. The cursor
change still informs the user when the mouse is hovering a link.

Pick-to: 6.3
Fixes: QTBUG-102303
Change-Id: Ifa4f9982bfaaf0e2e46230e8dbe30a5db7c9f592
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>

--- a/src/pdfquick/CMakeLists.txt
+++ b/src/pdfquick/CMakeLists.txt
@@ -1,9 +1,8 @@
 find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS Core Gui Qml Quick)
 
 set(qml_files
-# TODO:
-#    "+Material/PdfStyle.qml"
-#    "+Universal/PdfStyle.qml"
+    "+Material/PdfStyle.qml"
+    "+Universal/PdfStyle.qml"
     "PdfMultiPageView.qml"
     "PdfPageView.qml"
     "PdfScrollablePageView.qml"
